# learnings

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  INTEGRATION_TEST_RESULTS.md  Makefile  README_TRAINING.md  RUNPOD_TRAINING_SPEC.md  annotate.py  claude.md  finetune_paddleocr_vl.ipynb  finetune_qwen3_vl_qlora.ipynb  preprocess.py  pyproject.toml  requirements.txt  upload_to_hf.py
annotator/: __init__.py  base.py  client.py  factory.py  gemini_annotator.py  gemini_batch_annotator.py
configs/: base.py  loader.py
configs/experiments/: paddleocr_vl.py  quick_val.py  qwen3_qlora_r16.py
core/: __init__.py  config.py  file_discovery.py  image_utils.py  jsonl_utils.py  types.py
docs/plans/: 2025-01-03-runpod-training-pipeline.md
frontend/: app.js  index.html  styles.css
notebooks/: finetune_paddleocr_vl.ipynb
preprocessing/: __init__.py  base.py  cropper.py  downloader.py  olmocr_downloader.py  rotator.py  splitter.py
scripts/: README.md  compare_experiments.py  download_from_runpod.py  resume_training.sh  setup_pod.sh
servers/: __init__.py  app.py  services.py
test-folder/: 4197.tif  4216.tif  4217.tif
tests/: __init__.py  test_annotator.py  test_callbacks.py  test_checkpoint.py  test_config.py  test_dataset.py  test_metrics.py  test_preprocessing.py  test_services.py  test_types.py
training/: __init__.py  checkpoint.py  cost_tracker.py  dataset.py  early_stopping.py  eval_utils.py  inference.py  metrics.py  preflight.py  train.py
training/callbacks/: __init__.py  checkpoint.py  (+3 more)
viewer/: app.js  index.html  style.css
